# oz_03_main-001-BE

./: .gitignore  README.md  manage.py  pyproject.toml
.config_secret/: secret.json
.github/workflows/: cd.yml  ci.yml
common/: admin.py  models.py  serializers.py
common/migrations/: 0001_initial.py  0002_alter_allergy_name.py
config/: settings.py
dosirock/: asgi.py  settings.py  urls.py  views.py  wsgi.py
dosirock/dosirock_django/: manage.py
dosirock/settings/: __init__.py  base.py  local.py  production.py
lunch/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
lunch/migrations/: 0001_initial.py  0002_alter_lunch_description_alter_lunch_image_url_and_more.py  0003_lunch_total_kcal_lunchmenu_kcal_and_more.py  0004_alter_lunchmenu_lunch_alter_lunchmenu_menu.py
menus/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
menus/migrations/: 0001_initial.py  0002_alter_menu_category_menudetailcategory.py  0003_alter_menudetailcategory_allergy.py  0004_alter_menu_category.py  0005_alter_menudetailcategory_allergy_and_more.py
oauth/: models.py  tests.py  urls.py  views.py
orders/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_remove_orderitem_price.py  0003_alter_order_total_price.py  0004_rename_request_things_order_cooking_memo_and_more.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_allergies.py  0004_alter_user_status.py  (+1 more)
utils/: test_helper.py
(+4 files in other folders)
